Fix width so the text wraps a little nicer

--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ div.reasons div.inner {
   margin-left:auto;
   margin-right:auto;
   width:80%;
-  max-width:800px;
+  max-width:950px;
 }
 
 div.photo p.caption {
